# NeuroSQL

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: train_4gb.yaml
examples/: demo.py
neurosql/: __init__.py  api.py  api_cli.py  cli.py  model.py  utils.py
scripts/: 01_prepare_datasets.py  02_build_hf_dataset.py  03_train.py  04_export_model.py  05_push_to_hub.py  06_verify_resume.py
